some more work on courses and changed all buttons

--- a/app/src/main/res/layout/activity_brown_noise.xml
+++ b/app/src/main/res/layout/activity_brown_noise.xml
@@ -8,6 +8,7 @@
 
     <Button
         android:id="@+id/btnPlay"
+        style="@style/JuliusButton"
         android:layout_width="117dp"
         android:layout_height="74dp"
         android:text="PLAY"
@@ -20,6 +21,7 @@
 
     <Button
         android:id="@+id/btnPause"
+        style="@style/JuliusButton"
         android:layout_width="117dp"
         android:layout_height="74dp"
         android:text="PAUSE"
