--- a/app/src/main/res/layout/activity_view_events.xml
+++ b/app/src/main/res/layout/activity_view_events.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Events.ViewEvents">
+    tools:context=".Events.ViewCourses">
 
     <ListView
         android:id="@+id/eventListView"
@@ -37,6 +37,7 @@
         style="@style/JuliusButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="addCourseClick"
         android:text="ADD COURSE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
