--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -22,6 +22,7 @@
 
     <Button
         android:id="@+id/btnCallUs"
+        style="@style/JuliusButton"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:text="Call us"
@@ -62,6 +63,7 @@
 
     <Button
         android:id="@+id/btnEmailUs"
+        style="@style/JuliusButton"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:text="Email Us"
