--- a/app/src/main/res/layout/activity_study_tips.xml
+++ b/app/src/main/res/layout/activity_study_tips.xml
@@ -28,6 +28,7 @@
 
     <Button
         android:id="@+id/btnTip"
+        style="@style/JuliusButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Tip Generator"
