--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -19,12 +19,13 @@
             android:layout_weight="4"
             android:layout_height="wrap_content"/>
 
-            <Button
-                android:id="@+id/add_btn"
-                android:text="Add"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/add_btn"
+            style="@style/JuliusButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Add" />
     </LinearLayout>
     <ListView
         android:id="@+id/items_list"
