courses almost worked out

--- a/app/src/main/res/layout/activity_course_window.xml
+++ b/app/src/main/res/layout/activity_course_window.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Events.CourseWindow">
+    tools:context=".Events.CourseNotes">
 
     <LinearLayout
         android:id="@+id/linearLayout3"
@@ -13,7 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="128dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,8 +29,11 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
         <ListView
+            android:id="@+id/notesListView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent">
+
+        </ListView>
 
     </LinearLayout>
 
@@ -39,10 +42,24 @@
         style="@style/JuliusButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ADD EVENT"
+        android:onClick="addNote"
+        android:text="ADD NOTE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:gravity="center"
+        android:text="Delete notes by long pressing on desired note"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addEventButton"
+        app:layout_constraintVertical_bias="0.058" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
