--- a/app/src/main/res/layout/activity_events_menu.xml
+++ b/app/src/main/res/layout/activity_events_menu.xml
@@ -50,36 +50,6 @@
             android:hint="subject of course"
             android:inputType="textPersonName" />
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Date Start" />
-
-        <EditText
-            android:id="@+id/startDateText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:ems="10"
-            android:hint="enter the starting date"
-            android:inputType="date" />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Date End" />
-
-        <EditText
-            android:id="@+id/endDateText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:ems="10"
-            android:hint="enter the ending date"
-            android:inputType="date" />
-
     </LinearLayout>
 
     <Button
@@ -88,6 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:onClick="addCourseButton"
         android:text="ADD COURSE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
