--- a/app/src/main/res/layout/activity_brown_noise.xml
+++ b/app/src/main/res/layout/activity_brown_noise.xml
@@ -32,6 +32,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.468" />
 
+    <Button
+        android:id="@+id/viewButton5"
+        style="@style/JuliusButton"
+        android:layout_width="212dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="100dp"
+        android:onClick="backClick"
+        android:text="@string/back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnPlay" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="866dp"
