--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal">
         <EditText
             android:id="@+id/item_edit_text"
-            android:hint="Enter item"
+            android:hint="Write task here, hold to delete"
             android:layout_width="0dp"
             android:layout_weight="4"
             android:layout_height="wrap_content"/>
