--- a/app/src/main/res/layout/activity_deck_menu.xml
+++ b/app/src/main/res/layout/activity_deck_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Events.CourseNotes">
+    tools:context=".Tools.MemoryCards.DeckMenu">
 
     <LinearLayout
         android:id="@+id/linearLayout3"
@@ -22,47 +22,45 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/courseTextView"
-            android:layout_width="wrap_content"
+            android:id="@+id/deckTextView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Course Name"
+            android:gravity="center_horizontal"
+            android:text="@string/choose_your_deck"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
         <ListView
-            android:id="@+id/notesListView"
-            style="@style/Widget.AppCompat.ListView"
+            android:id="@+id/deckListView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:cacheColorHint="@color/colorAccent"
-            android:footerDividersEnabled="true"
-            android:hapticFeedbackEnabled="true"
-            android:headerDividersEnabled="true">
-
-        </ListView>
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
     <Button
-        android:id="@+id/addEventButton"
+        android:id="@+id/createNewDeckButton"
         style="@style/JuliusButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="addNote"
-        android:text="ADD NOTE"
+        android:onClick="createCardClick"
+        android:text="@string/create_new_deck"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        app:layout_constraintVertical_bias="0.225" />
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/deleteTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:layout_marginBottom="32dp"
         android:gravity="center"
-        android:text="Delete notes by long pressing on desired note"
+        android:text="@string/delete_decks_by_long_pressing_on_desired_deck"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addEventButton"
         app:layout_constraintVertical_bias="0.058" />
