--- a/app/src/main/res/layout/activity_my_cards.xml
+++ b/app/src/main/res/layout/activity_my_cards.xml
@@ -41,8 +41,7 @@
         android:id="@+id/cardText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="-2000dp"
-        android:layout_marginLeft="-2000dp"
+        android:gravity="center_horizontal|center_vertical"
         android:text="Testing"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/cardImage"
@@ -55,7 +54,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="-2000dp"
-        android:layout_marginLeft="-2000dp"
+        android:layout_marginRight="32dp"
+        android:gravity="center"
         android:text="Trying "
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/cardImage"
