--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/textInput"
+        android:id="@+id/textInputCalend"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:hint="Select a date and write your task here"
@@ -30,30 +30,56 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
+
     <Button
         android:id="@+id/saveTextButton"
-        android:layout_width="89dp"
-        android:layout_height="39dp"
         style="@style/JuliusButton"
+        android:layout_width="110dp"
+        android:layout_height="39dp"
         android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
-
     <Button
-        android:id="@+id/button4"
-        android:layout_width="89dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="304dp"
-        android:layout_marginTop="40dp"
+        android:id="@+id/eventMessBtn"
         style="@style/JuliusButton"
-        android:text="Back"
+        android:layout_width="110dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="80dp"
+        android:text="Get Events"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInput"
-        android:onClick="backClick"/>
+        app:layout_constraintTop_toBottomOf="@+id/textInputCalend" />
+
+    <Button
+        android:id="@+id/todoMessBtn"
+        style="@style/JuliusButton"
+        android:layout_width="110dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="20dp"
+        android:text="Get Todo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputCalend" />
+
+    <Button
+        android:id="@+id/button4"
+        style="@style/JuliusButton"
+        android:layout_width="110dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="141dp"
+        android:layout_marginBottom="100dp"
+        android:onClick="backClick"
+        android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputCalend"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
