--- a/app/src/main/res/layout/activity_timer_menu.xml
+++ b/app/src/main/res/layout/activity_timer_menu.xml
@@ -15,7 +15,6 @@
         android:layout_marginTop="260dp"
         android:layout_marginEnd="120dp"
         android:layout_marginBottom="500dp"
-        android:onClick="timerStartClick"
         android:text="START TIMER"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +27,7 @@
         android:id="@+id/timeTxtView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="00::00"
+        android:text="00:00"
         android:textSize="60sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
